flip_method parameter for CSI camera added
Ability to change the orientation of the image through the flip_method parameter for CSI camera

--- a/notebooks/csi_camera/csi_camera.ipynb
+++ b/notebooks/csi_camera/csi_camera.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from jetcam.csi_camera import CSICamera\n",
     "\n",
-    "camera = CSICamera(width=224, height=224)"
+    "camera = CSICamera(width=224, height=224, flip_method=0)"
    ]
   },
   {
