--- a/notebooks/csi_camera/multi_csi_camera.ipynb
+++ b/notebooks/csi_camera/multi_csi_camera.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "from jetcam.csi_camera import CSICamera\n",
     "\n",
-    "camera0 = CSICamera(capture_device=0, width=224, height=224)\n",
-    "camera1 = CSICamera(capture_device=1, width=224, height=224)"
+    "camera0 = CSICamera(capture_device=0, width=224, height=224, flip_method=0)\n",
+    "camera1 = CSICamera(capture_device=1, width=224, height=224, flip_method=0)"
    ]
   },
   {
